samples/_failures_safe/1761212104_d1d48f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4b4e509.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_f4b4e509.c:135:68: error: expected ‘)’ at end of input
  135 |             !matrix_get(a, 1, 0, &a21) || !matrix_get(a, 1, 1, &a22
      |                                                      ~             ^
      |                                                                    )
./samples/SAFE/__tmp_f4b4e509.c:135:13: error: expected declaration or statement at end of input
  135 |             !matrix_get(a, 1, 0, &a21) || !matrix_get(a, 1, 1, &a22
      |             ^
./samples/SAFE/__tmp_f4b4e509.c:135:13: error: expected declaration or statement at end of input
